--- a/styles/styl/mixins.styl
+++ b/styles/styl/mixins.styl
@@ -21,3 +21,6 @@ caTestColors()
 
   .bg-tc4
     background: tc4;
+
+  .bg-tc5
+    background: weiDark;
